fix: stops bays from loading BA and protomek ammunition